<resources>
    <string name="widget_quick_title">HanClip 빠른 실행</string>
    <string name="widget_open">HanClip 열기</string>
    <string name="widget_photo">사진</string>
    <string name="widget_quick">퀵모드</string>
    <string name="widget_aishot">AiShot</string>
    <string name="app_name">HanClip</string>
    <string name="shortcut_photo">사진</string>
    <string name="shortcut_photo_long">사진으로 새 영화 만들기</string>
    <string name="shortcut_quick">퀵모드</string>
    <string name="shortcut_quick_long">퀵모드로 빠르게 만들기</string>
    <string name="shortcut_aishot">AiShot</string>
    <string name="shortcut_aishot_long">AiShot 스마트 촬영</string>
</resources>
