<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="photo"
        android:enabled="true"
        android:icon="@drawable/shortcut_photo"
        android:shortcutShortLabel="@string/shortcut_photo"
        android:shortcutLongLabel="@string/shortcut_photo_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hanclip.android"
            android:targetClass="com.hanclip.android.MainActivity"
            android:data="hanclip://photo" />
    </shortcut>
    <shortcut
        android:shortcutId="quick"
        android:enabled="true"
        android:icon="@drawable/shortcut_quick"
        android:shortcutShortLabel="@string/shortcut_quick"
        android:shortcutLongLabel="@string/shortcut_quick_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hanclip.android"
            android:targetClass="com.hanclip.android.MainActivity"
            android:data="hanclip://quick" />
    </shortcut>
    <shortcut
        android:shortcutId="aishot"
        android:enabled="true"
        android:icon="@drawable/shortcut_aishot"
        android:shortcutShortLabel="@string/shortcut_aishot"
        android:shortcutLongLabel="@string/shortcut_aishot_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hanclip.android"
            android:targetClass="com.hanclip.android.MainActivity"
            android:data="hanclip://aishot" />
    </shortcut>
</shortcuts>
